fix spacing on number entry

--- a/src/components/config/RobotConfigPanel.module.css
+++ b/src/components/config/RobotConfigPanel.module.css
@@ -27,7 +27,7 @@
 
 .RobotConfigPanel .NumberEntryList {
     width:50%;
-    min-width: 25rem;
+    min-width: 15rem;
     max-width: 35rem;
     display: flex;
     flex-direction: column;
